# rust

./: .editorconfig  .gitignore  .pubnub.yml  .travis.yml  Cargo.toml  LICENSE  README.md  cargo.toml  deny.toml  readme.md
.github/: CODEOWNERS
.github/workflows/: cargo-deny.yml  commands-handler.yml  linters.yml  release.yml  run-tests.yml  run-validations.yml  vulnerability-scan.yml
.github/workflows/release/: pre-publish.sh  publish.sh  readme.sh  versions.json
crates/contract-tests/: Cargo.toml  README.md
crates/contract-tests/features/publish/: publish.feature
crates/contract-tests/src/: lib.rs
crates/contract-tests/tests/: contract.rs
crates/contract-tests/tests/features/publish/: publish.feature
crates/pubnub/: Cargo.toml  README.md
crates/pubnub/src/: lib.rs  publish.rs  pubnub_client.rs
crates/pubnub_core/: Cargo.toml
crates/pubnub_core/src/: deserialize.rs  error.rs  lib.rs  middleware.rs  parser.rs  serialize.rs  transport.rs  transport_request.rs  transport_response.rs
crates/pubnub_serialization_serde/: Cargo.toml
crates/pubnub_serialization_serde/src/: lib.rs  serde_serialize.rs
crates/pubnub_transport_reqwest/: Cargo.toml
crates/pubnub_transport_reqwest/src/: lib.rs  reqwest.rs
examples/: Cargo.toml  README.md  benchmark.rs  crypto.rs  custom_origin.rs  here_now.rs  here_now_blocking.rs  pam.rs  pam_blocking.rs  pam_no_std.rs  presence_state.rs  presence_state_blocking.rs  publish-subscribe.rs  publish.rs  publish_blocking.rs  publish_no_std.rs  subscribe.rs  subscribe_raw.rs  subscribe_raw_blocking.rs  subscribe_with_presence_state.rs  where_now.rs  where_now_blocking.rs
examples/no_std/: Cargo.toml  README.md
examples/no_std/src/: here_now.rs  presence_state.rs  publish.rs  subscribe.rs  where_now.rs
pubnub-core/: Cargo.toml
pubnub-core/src/: builder.rs  data.rs  lib.rs  message.rs  mvec.rs  pipe.rs  pubnub.rs  runtime.rs  subscribe.rs  transport.rs
pubnub-core/src/data/: channel.rs  history.rs  message.rs  mod.rs  object.rs  pam.rs  presence.rs  pubsub.rs  request.rs  response.rs  target.rs  timetoken.rs  uuid.rs
pubnub-core/src/data/channel/: mod.rs  name.rs  wildcard_spec.rs
pubnub-core/src/mock/: mod.rs  runtime.rs  transport.rs
pubnub-core/src/pubnub/: mod.rs  presence.rs  publish.rs  subscribe.rs  tests.rs
pubnub-core/src/subscribe/: channel.rs  mod.rs  registry.rs  subscribe_loop.rs
pubnub-core/src/subscription/: channel.rs  encoded_channels_list.rs  message_destinations.rs  mod.rs  mvec.rs  registry.rs  subscribe_loop.rs  subscribe_loop_supervisor.rs  subscribe_request.rs  subscription.rs
pubnub-core/src/tests/mock/: mod.rs  runtime.rs  transport.rs
pubnub-hyper/: Cargo.toml
pubnub-hyper/examples/: publish-subscribe.rs
pubnub-hyper/src/: lib.rs  macros.rs
pubnub-hyper/src/adapters/runtime/: tokio.rs  tokio_global.rs
pubnub-hyper/src/adapters/transport/hyper/: error.rs  mod.rs
pubnub-hyper/src/runtime/: mod.rs  tokio.rs  tokio_global.rs
pubnub-hyper/src/tests/: mod.rs
pubnub-hyper/src/transport/: mod.rs
pubnub-hyper/src/transport/hyper/: error.rs  history.rs  mod.rs  pam.rs  presence.rs  pubsub.rs  shared_parsers.rs  util.rs
pubnub-hyper/src/transport/hyper/util/: uritemplate.rs
pubnub-hyper/tests/: history.rs  integration.rs  pam.rs  presence.rs  pubsub.rs
pubnub-hyper/tests/common/: mod.rs
pubnub-test-util/: Cargo.toml
pubnub-test-util/src/: lib.rs
pubnub-util/: Cargo.toml
pubnub-util/src/: encoded_channels_list.rs  lib.rs  pam_signature.rs  uritemplate.rs  url_encoded_list.rs
pubnub-util/testdata/pam_signature/: body.json  formatted.blob
pubnub_parser/: Cargo.toml
pubnub_parser/src/: json_parser.rs
src/: channel.rs  error.rs  http.rs  lib.rs  message.rs  mvec.rs  pipe.rs  pubnub.rs  runtime.rs  subscribe.rs  transport.rs
src/adapters/runtime/: mod.rs  tokio.rs
src/adapters/transport/: mod.rs
src/adapters/transport/hyper/: error.rs  mod.rs
src/core/: channel.rs  channel_group.rs  channel_metadata.rs  crypto_provider.rs  cryptor.rs  data_stream.rs  deserialize.rs  deserializer.rs  entity.rs  error.rs  error_response.rs  headers.rs  metadata.rs  mod.rs  retry_policy.rs  runtime.rs  serialize.rs  serializer.rs  service_response.rs  spawner.rs  transport.rs  transport_request.rs  transport_response.rs  types.rs  user_metadata.rs  uuid_metadata.rs
src/core/event_engine/: cancel.rs  effect.rs  effect_dispatcher.rs  effect_execution.rs  effect_handler.rs  effect_invocation.rs  event.rs  mod.rs  state.rs  transition.rs
src/core/utils/: encoding.rs  mod.rs
src/dx/: mod.rs  parse_token.rs  publish.rs  pubnub_client.rs
src/dx/access/: builders.rs  mod.rs  payloads.rs  permissions.rs  result.rs  types.rs
src/dx/access/builders/: grant_token.rs  mod.rs  revoke.rs
src/dx/presence/: mod.rs  presence_manager.rs  result.rs
src/dx/presence/builders/: get_presence_state.rs  heartbeat.rs  here_now.rs  leave.rs  mod.rs  set_presence_state.rs  set_state.rs  where_now.rs
src/dx/presence/event_engine/: effect_handler.rs  event.rs  invocation.rs  mod.rs  state.rs  types.rs
src/dx/publish/: builders.rs  mod.rs  result.rs
src/dx/subscribe/: cancel.rs  event_dispatcher.rs  mod.rs  result.rs  subscription.rs  subscription_configuration.rs  subscription_manager.rs  subscription_set.rs  types.rs
src/dx/subscribe/builders/: mod.rs  raw.rs  subscribe.rs  (+1 more)
src/providers/: crypto_aescbc.rs  deserialization_serde.rs  futures_tokio.rs  mod.rs  serialization_serde.rs
src/providers/crypto/: crypto_module.rs  cryptor_header.rs  mod.rs
src/transport/: middleware.rs  mod.rs  reqwest.rs
tests/: README.md  contract.rs  contract_test.rs  features  publish.rs
tests/access/: access_steps.rs  mod.rs
tests/common/: common_steps.rs  mod.rs
tests/crypto/: crypto_steps.rs  mod.rs
tests/crypto/legacy/: crypto_aescbc.rs  cryptor.rs  mod.rs
tests/integration/: access_integration.rs  mod.rs
tests/presence/: mod.rs  presence_steps.rs
tests/publish/: mod.rs  publish_steps.rs
tests/reports/: report-required.xml
tests/subscribe/: mod.rs  subscribe_steps.rs
(+29 files in other folders)
