[package]
name = "examples"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["PubNub <support@pubnub.com>"]
description = "PubNub SDK examples"
repository = "https://github.com/pubnub/rust"
homepage = "https://www.pubnub.com"
categories = ["api-bindings", "asynchronous", "network-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "hello_world"
path = "hello_world.rs"

