[package]
name = "pubnub-core"
version = "0.1.0"
description = "PubNub core crate, modular and composable"
repository = "https://github.com/pubnub/rust"
keywords = ["pubnub", "publish-subscribe", "subscribe"]
authors = ["Stephen Blum <stephen@pubnub.com>", "Jay Oster <jay@pubnub.com>"]
edition = "2018"
readme = "../README.md"

# TODO: lib crates can't specify futures in dependencies, remove them and move
# to `dev-dependencies`.
# TODO: figure out why the exact versions of dependencies are specified, and
# properly relax the version requirements if the strictness is not justified.
[dependencies]
error-iter = "=0.2.0"
futures-util = { version = "=0.3.1", features = ["async-await", "async-await-macro"] }
json = "=0.12.0"
log = "=0.4.8"
percent-encoding = "=2.1.0"
thiserror = "=1.0.6"
http = "=0.2.0"
async-trait = "=0.1.21"
tokio = { version = "=0.2.6", features = ["sync", "stream"] } # we still use tokio for subscription logic

[dev-dependencies]
byteorder = "1.3"
env_logger = "0.7"
getrandom = "0.1"
randomize = "3.0"
mockiato = "0.9"
mockall = "0.6"
futures-executor = "0.3"

# For doctests only!
pubnub-hyper = { path = "../pubnub-hyper" }

[features]
nigthly = ["mockall/nightly"]
