[package]
name = "pubnub-core"
version = "0.1.0"
description = "PubNub core crate, modular and composable"
repository = "https://github.com/pubnub/rust"
keywords = ["pubnub", "publish-subscribe", "subscribe"]
authors = ["Stephen Blum <stephen@pubnub.com>", "Jay Oster <jay@pubnub.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
error-iter = "0.2"
futures-util = "0.3"
futures-channel = "0.3"
json = "0.12"
log = "0.4"
percent-encoding = "2.1"
thiserror = "1.0"
http = "0.2"
async-trait = "0.1"

[dev-dependencies]
futures-util = { version = "0.3", features = ["async-await", "async-await-macro", "sink", "channel"] }
futures-channel = { version = "0.3", features = ["sink"] }
byteorder = "1.3"
env_logger = "0.7"
getrandom = "0.1"
randomize = "3.0"
mockiato = "0.9"
mockall = "0.6"
futures-executor = "0.3"

# For doctests only!
pubnub-hyper = { path = "../pubnub-hyper" }

[features]
nigthly = ["mockall/nightly"]
