[package]
name = "pubnub-core"
version = "0.1.0"
description = "PubNub core crate, modular and composable"
repository = "https://github.com/pubnub/rust"
homepage = "https://www.pubnub.com/"
keywords = ["pubnub", "publish-subscribe", "subscribe"]
categories = ["network-programming"]
authors = ["Stephen Blum <stephen@pubnub.com>", "Jay Oster <jay@pubnub.com>"]
edition = "2018"
readme = "../README.md"
license-file = "../LICENSE"

[dependencies]
async-trait = "0.1"
error-iter = "0.2"
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
futures-util = { version = "0.3", features = ["async-await", "async-await-macro", "sink", "channel"] }
json = "0.12"
log = "0.4"
mockall = { version = "0.6", optional = true }
percent-encoding = "2.1"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
pubnub-test-util = { version = "0.1", path = "../pubnub-test-util" }
byteorder = "1.3"
getrandom = "0.1"
randomize = "3.0"
futures-executor = "0.3"

[features]
default = ["mock"]
mock = ["mockall"]
nightly = ["mock", "mockall/nightly"]

[badges]
travis-ci = { repository = "pubnub/rust", branch = "master" }
maintenance = { status = "actively-developed" }
