[package]
name = "pubnub-hyper"
version = "0.1.0"
description = "PubNub async crate based on Tokio and Hyper"
repository = "https://github.com/pubnub/rust"
keywords = ["pubnub", "publish-subscribe", "subscribe"]
authors = ["Stephen Blum <stephen@pubnub.com>", "Jay Oster <jay@pubnub.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
pubnub-core = { path = "../pubnub-core" }

futures-util = "=0.3.1"
tokio = "=0.2.6"
hyper = "=0.13.1"
hyper-tls = "=0.4.0"

async-trait = "=0.1.21"
error-iter = "=0.2.0"
thiserror = "=1.0.6"

[dev-dependencies]
byteorder = "1.3"
env_logger = "0.7"
getrandom = "0.1"
randomize = "3.0"
futures-executor = "=0.3.1"
futures-util = { version = "=0.3.1", features = ["async-await", "async-await-macro"] }
json = "=0.12.0"
log = "=0.4.8"
percent-encoding = "=2.1.0"
http = "=0.2.0"
tokio = { version = "=0.2.6", features = ["full"] }
hyper = { version = "=0.13.1", features = ["stream"] }
