[package]
name = "pubnub-hyper"
version = "0.1.0"
description = "PubNub async crate based on Tokio and Hyper"
repository = "https://github.com/pubnub/rust"
keywords = ["pubnub", "publish-subscribe", "subscribe"]
authors = ["Stephen Blum <stephen@pubnub.com>", "Jay Oster <jay@pubnub.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
pubnub-core = { version = "=0.1.0", path = "../pubnub-core" }
futures-util = "0.3"
tokio = "0.2"
hyper = "0.13"
hyper-tls = "0.4"
async-trait = "0.1"
error-iter = "0.2"
thiserror = "1.0"

[dev-dependencies]
byteorder = "1.3"
env_logger = "0.7"
getrandom = "0.1"
randomize = "3.0"
futures-executor = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["async-await", "async-await-macro"] }
json = "0.12"
log = "0.4"
percent-encoding = "2.1"
http = "0.2"
tokio = { version = "0.2", features = ["full"] }
hyper = { version = "0.13", features = ["stream"] }
