[package]
name = "pubnub-util"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "PubNub utils"
repository = "https://github.com/pubnub/rust"
homepage = "https://www.pubnub.com/"
keywords = ["pubnub", "publish-subscribe", "subscribe"]
categories = ["network-programming"]
readme = "../README.md"
license-file = "../LICENSE"

[dependencies]
percent-encoding = { version = "2.1", optional = true }

[features]
default = ["url-encoded-list"]
url-encoded-list = ["percent-encoding"]

[badges]
travis-ci = { repository = "pubnub/rust", branch = "master" }
maintenance = { status = "actively-developed" }
