[package]
name = "pubnub-util"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
description = "PubNub utils"
repository = "https://github.com/pubnub/rust"
homepage = "https://www.pubnub.com/"
keywords = ["pubnub", "publish-subscribe", "subscribe"]
categories = ["network-programming"]
readme = "../README.md"
license-file = "../LICENSE"

[dependencies]
base64 = { version = "0.13", optional = true }
hmac = { version = "0.10", optional = true }
percent-encoding = { version = "2.1", optional = true }
sha2 = { version = "0.9", optional = true }
uritemplate-next = { version = "0.2", optional = true }

[features]
default = ["url-encoded-list", "uritemplate_api", "pam_signature"]
url-encoded-list = ["percent-encoding"]
uritemplate_api = ["uritemplate-next"]
pam_signature = ["hmac", "sha2", "base64"]

[badges]
travis-ci = { repository = "pubnub/rust", branch = "master" }
maintenance = { status = "actively-developed" }
