[package]
name = "contract-tests"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["PubNub <support@pubnub.com>"]
description = "PubNub SDK contract tests"
repository = "https://github.com/pubnub/rust"
homepage = "https://www.pubnub.com"
categories = ["api-bindings", "asynchronous", "network-programming"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
