[package]
name = "no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pubnub = { path = "../../", default_features = false, features = ["blocking", "serde", "publish", "subscribe", "presence"] }
serde = { version = "1.0", default_features = false, features = ["derive"] }
getrandom = { version = "0.3", default_features = false }

[[bin]]
name = "publish"
path = "src/publish.rs"

[[bin]]
name = "subscribe"
path = "src/subscribe.rs"

[[bin]]
name = "here_now"
path = "src/here_now.rs"

[[bin]]
name = "where_now"
path = "src/where_now.rs"

[[bin]]
name = "presence_state"
path = "src/presence_state.rs"

